# asterai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
asterai/: Cargo.toml
asterai/src/: checksum.rs  error.rs  lib.rs  runner.rs
asterai/src/component/: function_interface.rs  function_name.rs  interface.rs  mod.rs  pkg.rs  set.rs  wit.rs
asterai/src/environment/: mod.rs
asterai/src/plugin/: function_metadata.rs  function_name.rs  interface.rs  mod.rs  pkg.rs  set.rs
asterai/src/resource/: metadata.rs  mod.rs
asterai/src/runtime/: entry.rs  env.rs  mod.rs  output.rs  std_out_err.rs  wasm_instance.rs
asterai/wit/: asterai_host.wit
cli/: Cargo.toml  help.txt
cli/help/: component_push.txt  help.txt
cli/init/rust/: Cargo.toml.template  build.sh  component.wit  deploy.sh
cli/init/rust/src/: bindings.rs  lib.rs
cli/init/typescript/: component.ts  component.wit  package.json
cli/src/: artifact.rs  auth.rs  config.rs  editor.rs  local_store.rs  main.rs  registry.rs  runtime.rs  version_resolver.rs
cli/src/cli_ext/: component.rs  component_binary.rs  component_runtime.rs  environment.rs  mod.rs  plugin_runtime.rs  resource.rs  resource_metadata.rs
cli/src/command/: auth.rs  common_flags.rs  help.rs  login.rs  mod.rs  resource_or_id.rs  version.rs
cli/src/command/component/: build.rs  call.rs  delete.rs  init.rs  list.rs  mod.rs  pkg.rs  pull.rs  push.rs
cli/src/command/env/: add.rs  add_component.rs  call.rs  call_api.rs  cp.rs  delete.rs  edit.rs  init.rs  inspect.rs  list.rs  mod.rs  name_or_id.rs  pull.rs  push.rs  remove.rs  remove_component.rs  resource_or_id.rs  run.rs  set_var.rs
cli/src/language/: mod.rs  rust.rs  typescript.rs
cli/src/tui/: app.rs  mod.rs  ops.rs
cli/src/tui/views/: auth.rs  chat.rs  mod.rs  picker.rs  setup.rs
component-examples/: README.md
component-examples/math/: component.ts  component.wit  package.json
component-examples/ts/math/: .gitignore  component.ts  component.wit  package.json  pnpm-lock.yaml
npm/asterai/: package.json
npm/asterai/lib/: index.js
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
runtime/: Cargo.toml
runtime/src/: checksum.rs  error.rs  lib.rs  runner.rs
runtime/src/component/: binary.rs  function_interface.rs  function_name.rs  log.rs  set.rs  wit.rs
runtime/src/environment/: deps.rs  mod.rs
runtime/src/resource/: metadata.rs  mod.rs
runtime/src/runtime/: component_linker.rs  cron.rs  cron_entry.rs  entry.rs  env.rs  http.rs  mod.rs  output.rs  parsing.rs  std_out_err.rs  wasm_instance.rs  wit_bindings.rs  ws.rs  ws_entry.rs
runtime/src/runtime/link_components/: dep_stub.rs  mod.rs
runtime/wit/: asterai_host.wit  asterai_host_cron.wit  asterai_host_ws.wit
scripts/: install.ps1  update-version.sh
