[package]
name = "asterai"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
eyre = { workspace = true }
asterai_runtime = { path = "../asterai" }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["multipart"] }
