[package]
name = "asterai"
version = "1.0.0-alpha.8"
edition = { workspace = true }
description = "CLI for asterai - the portable AI compute platform"
license = "Apache-2.0"
repository = "https://github.com/asterai-io/asterai"
homepage = "https://asterai.io"
keywords = ["wasm", "webassembly", "ai", "agents", "cli"]
categories = ["command-line-utilities", "wasm"]
exclude = [
  "init/typescript/node_modules/**",
  "init/typescript/build/**",
  "init/typescript/generated/**",
  "init/rust/target/**",
]

[dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
eyre = { workspace = true }
asterai_runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
include_dir = "0.7"
semver = "1"
wit-parser = { workspace = true }
wit-component = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }
