[package]
name = "asterai_runtime"
version = "1.0.0-alpha.11"
edition = { workspace = true }
description = "Runtime library for asterai - the portable AI compute platform"
license = "Apache-2.0"
repository = "https://github.com/asterai-io/asterai"
homepage = "https://asterai.io"
keywords = ["wasm", "webassembly", "ai", "agents", "runtime"]
categories = ["wasm"]

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
eyre = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wiggle = { workspace = true }
wit-parser = { workspace = true }
wit-component = { workspace = true }
wit-bindgen = { workspace = true }
warg-protocol = { workspace = true }
wasm-pkg-core = { workspace = true }
wasm-pkg-client = { workspace = true }
wasm-pkg-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
# This should match the version used by wit-parser for compatibility.
semver = { workspace = true }
secrecy = { workspace = true }
indexmap = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
petgraph = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
derive-getters = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
